TD-4770 Fix Testcases for windows

--- a/src/Test/XhtmlExport/TestFiles/Expected/Gondwana Sample/Gondwana Sample.tex
+++ b/src/Test/XhtmlExport/TestFiles/Expected/Gondwana Sample/Gondwana Sample.tex
@@ -44,6 +44,8 @@
 \font\spande="Times New Roman/GR" at 12pt
 \font\divenfonipa="Times New Roman/GR" at 12pt
 \font\spanenfonipa="Times New Roman/GR" at 12pt
+\font\divenGB="Times New Roman/GR" at 12pt
+\font\spanenGB="Times New Roman/GR" at 12pt
 \font\diven="Times New Roman/GR" at 12pt
 \font\spanen="Times New Roman/GR" at 12pt
 \font\divesaab="Charis SIL AmArea/GR" at 12pt
@@ -64,6 +66,10 @@
 \font\spanggoTeluIN="Gautami/GR" at 12pt
 \font\divgrc="Galatia SIL/GR" at 12pt
 \font\spangrc="Galatia SIL/GR" at 12pt
+\font\divhagLatnGHfonipaxemic="Times New Roman/GR" at 12pt
+\font\spanhagLatnGHfonipaxemic="Times New Roman/GR" at 12pt
+\font\divhag="Times New Roman/GR" at 12pt
+\font\spanhag="Times New Roman/GR" at 12pt
 \font\divhbo="Ezra SIL/GR" at 12pt
 \font\spanhbo="Ezra SIL/GR" at 12pt
 \font\divhe="Charis SIL/GR" at 12pt
