--- a/src/Test/XhtmlExport/TestFiles/Expected/NKOu3/NKOu3.tex
+++ b/src/Test/XhtmlExport/TestFiles/Expected/NKOu3/NKOu3.tex
@@ -46,6 +46,8 @@
 \font\spande="Times New Roman/GR" at 12pt
 \font\divenfonipa="Doulos SIL/GR" at 12pt
 \font\spanenfonipa="Doulos SIL/GR" at 12pt
+\font\divenGB="Charis SIL/GR" at 12pt
+\font\spanenGB="Charis SIL/GR" at 12pt
 \font\diven="Charis SIL/GR" at 12pt
 \font\spanen="Charis SIL/GR" at 12pt
 \font\divesaab="Charis SIL AmArea/GR" at 12pt
@@ -66,6 +68,10 @@
 \font\spanggoTeluIN="Gautami/GR" at 12pt
 \font\divgrc="Galatia SIL/GR" at 12pt
 \font\spangrc="Galatia SIL/GR" at 12pt
+\font\divhagLatnGHfonipaxemic="Times New Roman/GR" at 12pt
+\font\spanhagLatnGHfonipaxemic="Times New Roman/GR" at 12pt
+\font\divhag="Times New Roman/GR" at 12pt
+\font\spanhag="Times New Roman/GR" at 12pt
 \font\divhbo="Ezra SIL/GR" at 12pt
 \font\spanhbo="Ezra SIL/GR" at 12pt
 \font\divhe="Charis SIL/GR" at 12pt
@@ -374,9 +380,7 @@
 \clubpenalty=300
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{33}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ $“$Mlɩnu yébi ɩkʋ ɛ́. Ɔdɔtɔpʋ ɔkʋ lɔ́dɔ }\SeeInGlossaryzxxParagraphscrSectioncolumnsscrBookscrBody{wáɩn}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ ndɔ. Olegyi ɩban bómlí mʋ́. Olokwi wáɩn amʋ onyimɛ́kpá. Ɔlɔpwɛ obu fʋ́áhɛ́ kʋ há ndɔ ámʋ agyópʋ. Mʋ́ʋ́ ɔlɔpʋ ndɔ ámʋ wá apafɔ ɩbɩtɔ, olotu ɔkpa yɔ́ ɔmá ɩkʋtɔ. }\begin{center}\begin{center}
-\spanzxxpictureCaptionpicturePageParagraphscrSectioncolumnsscrBookscrBody{Wáɩn Ndɔ nɩ́.}
-
-\referencezxxpictureCaptionpicturePageParagraphscrSectioncolumnsscrBookscrBody{Mateo 21:33}\end{center} 
+\spanzxxpictureCaptionpicturePageParagraphscrSectioncolumnsscrBookscrBody{Wáɩn Ndɔ nɩ́.}\referencezxxpictureCaptionpicturePageParagraphscrSectioncolumnsscrBookscrBody{Mateo 21:33}\end{center} 
 \end{center}
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{34}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Brɛ́á wáɩn-abí amʋ kpɔtɩ́bɩ lɔ́fʋn a, ɔlɔwa mʋ asúmpʋ́ apafɔ ámʋ wá ɔbɛ́ɛ, bʋyɔ́hɔ mʋ ogyíkpá ba mʋ. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{35}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Támɛ apafɔ ámʋ bɛkɩtá amʋ́, dá ɔkʋlɛ, mɔ́ ɔkʋlɛ, dá ɔkʋlɛ ɛ́ abwi. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{36}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Ndɔ mʋ wie amʋ lɛ́trá wa mʋ asúmpʋ́ bámbá ánɩ́ bʋtsɔ dʋn agyankpapʋ amʋ. Apafɔ ámʋ bɔbwɛ amʋ́ ɛ́ alɩ kɛ́n. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{37}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Mʋ́ tráhɛ kʋ́ráá á, ɔlɛblɩ́ ɔbɛ́ɛ, $‘$Oo, bóbu mɩ́ bí kwɩ́ɩ́hɛ́ mʋ́.$’$ Mʋ́ sʋ ɔlɔwa mʋ ɛ́. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{38}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Támɛ brɛ́á apafɔ ámʋ bowun mʋ bi ámʋ sɩ́sɩ́ á, bɛbláa aba bɛɛ, $‘$Ɔ́nɩ obégyi mʋ sɩ atɔ́ nɩ́. Mlɩha amɔ mʋ, mɛ́nɩ ndɔ ámʋ ibémlí anɩ klɛ́.$’$ }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{39}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Mʋ́ sʋ bɛkɩtá mʋ, bɩ́tɩ́a mʋ dálɩ ndɔ ámʋtɔ yɔ́mɔ mʋ.$”$}\end{spacing}
@@ -444,9 +448,7 @@
 \clubpenalty=300
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{18}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Támɛ Yesu lówun amʋ́ agywɩɩn laláhɛ amʋ. Mʋ́ sʋ ɔlɛfɩtɛ́ amʋ́ ɔbɛ́ɛ, $“$Apinabwɛbí abwɛpʋ́, ntogyi sʋ́ mlɩdɛ́ mɩ́ sɔ́ɔ kɩ? }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{19}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Mlɩtsu kɔ́ba amʋ́ʋ́ bʋtɔpʋ́ká lampóo amʋ ɩkʋ ba mɩ ankɩ.$”$}\begin{center}\begin{center}
-\spanzxxpictureCaptionpictureColumnParagraphscrSectioncolumnsscrBookscrBody{Lampóoka kɔ́ba nɩ.}
-
-\referencezxxpictureCaptionpictureColumnParagraphscrSectioncolumnsscrBookscrBody{Mateo 22:19}\end{center} 
+\spanzxxpictureCaptionpictureColumnParagraphscrSectioncolumnsscrBookscrBody{Lampóoka kɔ́ba nɩ.}\referencezxxpictureCaptionpictureColumnParagraphscrSectioncolumnsscrBookscrBody{Mateo 22:19}\end{center} 
 \end{center}
 \end{spacing}\begin{spacing}{0.541666666666667}\widowpenalty=300
 \clubpenalty=300
