TD-4790 Dictionary overrides not working completely

--- a/src/Test/XhtmlExport/TestFiles/Expected/NKOu3/NKOu3.tex
+++ b/src/Test/XhtmlExport/TestFiles/Expected/NKOu3/NKOu3.tex
@@ -44,10 +44,14 @@
 \font\spanbzh="Charis SIL/GR" at 12pt
 \font\divde="Times New Roman/GR" at 12pt
 \font\spande="Times New Roman/GR" at 12pt
+\font\divdv="MV Boli/GR" at 12pt
+\font\spandv="MV Boli/GR" at 12pt
 \font\divenfonipa="Doulos SIL/GR" at 12pt
 \font\spanenfonipa="Doulos SIL/GR" at 12pt
 \font\divenGB="Charis SIL/GR" at 12pt
 \font\spanenGB="Charis SIL/GR" at 12pt
+\font\divenPH="Charis SIL/GR" at 12pt
+\font\spanenPH="Charis SIL/GR" at 12pt
 \font\diven="Charis SIL/GR" at 12pt
 \font\spanen="Charis SIL/GR" at 12pt
 \font\divesaab="Charis SIL AmArea/GR" at 12pt
@@ -56,6 +60,8 @@
 \font\spanes="Charis SIL/GR" at 12pt
 \font\divfa="Times New Roman/GR" at 12pt
 \font\spanfa="Times New Roman/GR" at 12pt
+\font\divfrfonipa="Doulos SIL/GR" at 12pt
+\font\spanfrfonipa="Doulos SIL/GR" at 12pt
 \font\divfrZxxxxaudio="Charis SIL/GR" at 12pt
 \font\spanfrZxxxxaudio="Charis SIL/GR" at 12pt
 \font\divfr="Charis SIL/GR" at 12pt
@@ -112,10 +118,26 @@
 \font\spanne="Charis SIL/GR" at 12pt
 \font\divpt="Times New Roman/GR" at 12pt
 \font\spanpt="Times New Roman/GR" at 12pt
+\font\divqaafonipaxkal="Charis SIL/GR" at 12pt
+\font\spanqaafonipaxkal="Charis SIL/GR" at 12pt
 \font\divqaafonipaxyii="Doulos SIL/GR" at 12pt
 \font\spanqaafonipaxyii="Doulos SIL/GR" at 12pt
+\font\divqaaxfwt="Times New Roman/GR" at 12pt
+\font\spanqaaxfwt="Times New Roman/GR" at 12pt
+\font\divqaaxgot="Times New Roman/GR" at 12pt
+\font\spanqaaxgot="Times New Roman/GR" at 12pt
+\font\divqaaxkal="Charis SIL/GR" at 12pt
+\font\spanqaaxkal="Charis SIL/GR" at 12pt
 \font\divqaaxlel="Times New Roman/GR" at 12pt
 \font\spanqaaxlel="Times New Roman/GR" at 12pt
+\font\divqaaxpig="Times New Roman/GR" at 12pt
+\font\spanqaaxpig="Times New Roman/GR" at 12pt
+\font\divqaaxsim="Times New Roman/GR" at 12pt
+\font\spanqaaxsim="Times New Roman/GR" at 12pt
+\font\divqaaxsta="Doulos SIL/GR" at 12pt
+\font\spanqaaxsta="Doulos SIL/GR" at 12pt
+\font\divqaaZxxxxkalAUDIO="Charis SIL/GR" at 12pt
+\font\spanqaaZxxxxkalAUDIO="Charis SIL/GR" at 12pt
 \font\divro="Charis SIL/GR" at 12pt
 \font\spanro="Charis SIL/GR" at 12pt
 \font\divru="Charis SIL/GR" at 12pt
@@ -152,6 +174,8 @@
 \font\spanur="Scheherazade/GR" at 12pt
 \font\divvi="Charis SIL/GR" at 12pt
 \font\spanvi="Charis SIL/GR" at 12pt
+\font\divxas="Charis SIL/GR" at 12pt
+\font\spanxas="Charis SIL/GR" at 12pt
 \font\divzhCNpinyin="Charis SIL/GR" at 12pt
 \font\spanzhCNpinyin="Charis SIL/GR" at 12pt
 \font\divzhCN="SimSun/GR" at 12pt
@@ -227,7 +251,7 @@
 \end{titlepage} 
 \pagenumbering{roman}  
 \setcounter{page}{3} 
-\input{} 
+\input{File2Cpy.tex} 
 \pagestyle{plain} 
 \newpage 
 
