--- a/src/Test/XhtmlExport/TestFiles/Expected/Gondwana Sample/Gondwana Sample.tex
+++ b/src/Test/XhtmlExport/TestFiles/Expected/Gondwana Sample/Gondwana Sample.tex
@@ -42,10 +42,14 @@
 \font\spanbzh="Charis SIL/GR" at 12pt
 \font\divde="Times New Roman/GR" at 12pt
 \font\spande="Times New Roman/GR" at 12pt
+\font\divdv="MV Boli/GR" at 12pt
+\font\spandv="MV Boli/GR" at 12pt
 \font\divenfonipa="Times New Roman/GR" at 12pt
 \font\spanenfonipa="Times New Roman/GR" at 12pt
 \font\divenGB="Times New Roman/GR" at 12pt
 \font\spanenGB="Times New Roman/GR" at 12pt
+\font\divenPH="Times New Roman/GR" at 12pt
+\font\spanenPH="Times New Roman/GR" at 12pt
 \font\diven="Times New Roman/GR" at 12pt
 \font\spanen="Times New Roman/GR" at 12pt
 \font\divesaab="Charis SIL AmArea/GR" at 12pt
@@ -54,6 +58,8 @@
 \font\spanes="Charis SIL/GR" at 12pt
 \font\divfa="Times New Roman/GR" at 12pt
 \font\spanfa="Times New Roman/GR" at 12pt
+\font\divfrfonipa="Doulos SIL/GR" at 12pt
+\font\spanfrfonipa="Doulos SIL/GR" at 12pt
 \font\divfrZxxxxaudio="Charis SIL/GR" at 12pt
 \font\spanfrZxxxxaudio="Charis SIL/GR" at 12pt
 \font\divfr="Charis SIL/GR" at 12pt
@@ -110,10 +116,26 @@
 \font\spanne="Charis SIL/GR" at 12pt
 \font\divpt="Times New Roman/GR" at 12pt
 \font\spanpt="Times New Roman/GR" at 12pt
+\font\divqaafonipaxkal="Charis SIL/GR" at 12pt
+\font\spanqaafonipaxkal="Charis SIL/GR" at 12pt
 \font\divqaafonipaxyii="Doulos SIL/GR" at 12pt
 \font\spanqaafonipaxyii="Doulos SIL/GR" at 12pt
+\font\divqaaxfwt="Times New Roman/GR" at 12pt
+\font\spanqaaxfwt="Times New Roman/GR" at 12pt
+\font\divqaaxgot="Times New Roman/GR" at 12pt
+\font\spanqaaxgot="Times New Roman/GR" at 12pt
+\font\divqaaxkal="Charis SIL/GR" at 12pt
+\font\spanqaaxkal="Charis SIL/GR" at 12pt
 \font\divqaaxlel="Times New Roman/GR" at 12pt
 \font\spanqaaxlel="Times New Roman/GR" at 12pt
+\font\divqaaxpig="Times New Roman/GR" at 12pt
+\font\spanqaaxpig="Times New Roman/GR" at 12pt
+\font\divqaaxsim="Times New Roman/GR" at 12pt
+\font\spanqaaxsim="Times New Roman/GR" at 12pt
+\font\divqaaxsta="Doulos SIL/GR" at 12pt
+\font\spanqaaxsta="Doulos SIL/GR" at 12pt
+\font\divqaaZxxxxkalAUDIO="Charis SIL/GR" at 12pt
+\font\spanqaaZxxxxkalAUDIO="Charis SIL/GR" at 12pt
 \font\divro="Charis SIL/GR" at 12pt
 \font\spanro="Charis SIL/GR" at 12pt
 \font\divru="Charis SIL/GR" at 12pt
@@ -150,6 +172,8 @@
 \font\spanur="Scheherazade/GR" at 12pt
 \font\divvi="Charis SIL/GR" at 12pt
 \font\spanvi="Charis SIL/GR" at 12pt
+\font\divxas="Charis SIL/GR" at 12pt
+\font\spanxas="Charis SIL/GR" at 12pt
 \font\divzhCNpinyin="Charis SIL/GR" at 12pt
 \font\spanzhCNpinyin="Charis SIL/GR" at 12pt
 \font\divzhCN="SimSun/GR" at 12pt
@@ -284,7 +308,7 @@
 \end{titlepage} 
 \pagenumbering{roman}  
 \setcounter{page}{3} 
-\input{} 
+\input{File2Cpy.tex} 
 \pagestyle{plain} 
 \newpage 
 
