TD-4721 Formatting via Pathway is not following flex TC

--- a/src/Test/XhtmlExport/TestFiles/Expected/Gondwana Sample/Gondwana Sample.tex
+++ b/src/Test/XhtmlExport/TestFiles/Expected/Gondwana Sample/Gondwana Sample.tex
@@ -34,6 +34,8 @@
 \setlength{\parfillskip}{0pt plus 1fil}
 \font\divarIQ="Times New Roman/GR" at 12pt
 \font\spanarIQ="Times New Roman/GR" at 12pt
+\font\divblz="Charis SIL AmArea/GR" at 12pt
+\font\spanblz="Charis SIL AmArea/GR" at 12pt
 \font\divbn="Charis SIL/GR" at 12pt
 \font\spanbn="Charis SIL/GR" at 12pt
 \font\divbzhfonipa="Doulos SIL/GR" at 12pt
@@ -308,7 +310,7 @@
 \end{titlepage} 
 \pagenumbering{roman}  
 \setcounter{page}{3} 
-\input{} 
+\input{File2Cpy.tex} 
 \pagestyle{plain} 
 \newpage 
 
