--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,63 @@
-pathway (1.15.5.5667)  experimental; urgency=high
+pathway (1.15.7.5891)  experimental; urgency=high
 
-  * Daily Build
+  * Common:TD-4758 Enable hyphenation for Scripture.</li>
+  * Common:TD-4780 Spaces in username leads to problems</li>
+  * Epub/HTML5:TD-1812 Epub validation errors</li>
+  * Epub/HTML5:TD-4557 Fix Scripture epub creation with PathwayB</li>
+  * Epub/HTML5:TD-4689 Epub too much space between entries</li>
+  * Epub/HTML5:TD-4744 Epub validator error in linux</li>
+  * Epub/HTML5:TD-4784 Improve file splitting, Update TOC</li>
+  * Epub/HTML5:Make a separate cross-platform option for HTML5</li>
+  * General:TD-4681 Handle audio writing system export</li>
+  * General:TD-4721 Formatting via pathway is not following flex</li>
+  * General:TD-4744 Validation errors appear while exporting</li>
+  * General:TD-4770 Fix when xhtml has insignificant line breaks</li>
+  * General:TD-4775 Pass Paratext database name to PathwayExport</li>
+  * General:TD-4785 Add logic to handle css overrides.</li>
+  * General:TD-4792 Forming Export Directory name</li>
+  * Help:TD-4796 Help/More Help still opens web to old Pathway site</li>
+  * Help:TD-4802 Update preprocessing descriptions</li>
+  * Linux:TD-4725 fix crash from missing name of bold font</li>
+  * Linux:TD-4738 Creating 'Copy of' and 'Custom' Stylesheets ...</li>
+  * Linux:TD-4744 adjust validator to have extra slash for linux</li>
+  * Linux:TD-4454 Text Merges in the Prince Pdf Output If I set Stylesheet as Two Column</li>
+  * Linux:TD-4766 mono-basic4-sil dependency error</li>
+  * LO/OO:TD-4269 Running Header appears twice in the page view</li>
+  * LO/OO:TD-4301 Space after footnote marker before period</li>
+  * LO/OO:TD-4396 Pathway justify not working on minor entries</li>
+  * LO/OO:TD-4708 headword not bold</li>
+  * LO/OO:TD-4739 MinorEntryVariant Color override and extra padding removed</li>
+  * LO/OO:TD-4740 Extended Note data content is not appear</li>
+  * LO/OO:TD-4741 Base font size</li>
+  * LO/OO:TD-4755 Primary entry references missing in output</li>
+  * LO/OO:TD-4773 Header Font size dropdown is empty</li>
+  * LO/OO:TD-4790 Handle rule in overides .css file</li>
+  * LO/OO:TD-4801 Fonts for mt2 fq and fqa paratext display</li>
+  * LO/OO:TD-4803 crash when margin-left is bad</li>
+  * LO/OO:TD-4804 create guidewords in line1 as well as paragraph</li>
+  * LO/OO:TD-4686 baseline alignment of right guidword</li>
+  * LO/OO:TD-4383 The option to split files fails to produce a LibreOffice file</li>
+  * LO/OO:TD-4519 Ask about running macro 2nd time</li>
+  * LO/OO:TD-4719 Characters and colors changed</li>
+  * Paratext:TD-4512 Marker rq missing</li>
+  * Paratext:TD-4513 Use Styles from Custom sty file</li>
+  * Paratext:TD-4614 PT export with Pathway on Linux doesn't use styles from the projects sty file.
+  * Paratext:TD-4754 Pathway SE Build removed Scripture button</li>
+  * Paratext:TD-4763 Footnotes in rq prevent output</li>
+  * Paratext:TD-4797 remove modifications to resolver for readding ssf file.</li>
+  * Paratext:TD-4805 Paratext complains that Pathway is incompatible</li>
+  * Stylesheet:TD-4757 Right aligned Scripture quote reference</li>
+  * Stylesheet:Apply justification to variant and complex minor entries</li>
+  * UI:TD-4045 Text merging happens when I set the Font size ‘0’ ...</li>
+  * UI:TD-4737 Running Header, Reference Format did not save</li>
+  * UI:TD-4751 Using ConfigurationTool, SaveAs copies the wrong sheet</li>
+  * UI:TD-4774 update link on about box for new web site</li>
+  * UI:TD-4779 custom sheet is getting recreated after reset</li>
+  * UI:TD-4241 Inform user of what is happening when the process takes a long time</li>
+  * XeLaTeX:TD-4368 One empty page is created between main and reversal</li>
+  * XeLaTeX:TD-4702 Fields begin at new line instead of continuing in the paragraph</li>
 
- -- Greg Trihus <greg_trihus@sil.org>  Mon, 20 Mar 2017 12:16:20 -0600
+ -- Greg Trihus <greg_trihus@sil.org>  Thu, 23 Mar 2017 10:58:20 -0600
 
 pathway (1.15.4)  experimental; urgency=high
 
