TD-4770 Test Results

--- a/src/Test/XhtmlExport/TestFiles/Expected/Gondwana Sample/Gondwana Sample.tex
+++ b/src/Test/XhtmlExport/TestFiles/Expected/Gondwana Sample/Gondwana Sample.tex
@@ -79,16 +79,16 @@
 \font\spanen="Times New Roman/GR" at 12pt
 \font\divesaab="Charis SIL AmArea/GR" at 12pt
 \font\spanesaab="Charis SIL AmArea/GR" at 12pt
-\font\dives="Charis SIL/GR" at 12pt
-\font\spanes="Charis SIL/GR" at 12pt
+\font\dives="Times New Roman/GR" at 12pt
+\font\spanes="Times New Roman/GR" at 12pt
 \font\divfa="Times New Roman/GR" at 12pt
 \font\spanfa="Times New Roman/GR" at 12pt
 \font\divfrfonipa="Doulos SIL/GR" at 12pt
 \font\spanfrfonipa="Doulos SIL/GR" at 12pt
 \font\divfrZxxxxaudio="Charis SIL/GR" at 12pt
 \font\spanfrZxxxxaudio="Charis SIL/GR" at 12pt
-\font\divfr="Times New Roman/GR" at 12pt
-\font\spanfr="Times New Roman/GR" at 12pt
+\font\divfr="Charis SIL/GR" at 12pt
+\font\spanfr="Charis SIL/GR" at 12pt
 \font\divggofonipaxemic="Tahoma/GR" at 12pt
 \font\spanggofonipaxemic="Tahoma/GR" at 12pt
 \font\divggoINxaheri="Arial Unicode MS/GR" at 12pt
@@ -173,6 +173,10 @@
 \font\spansehZxxxxaudio="Charis SIL/GR" at 12pt
 \font\divseh="Charis SIL/GR" at 12pt
 \font\spanseh="Charis SIL/GR" at 12pt
+\font\divshhZxxxxaudio="Charis SIL/GR" at 12pt
+\font\spanshhZxxxxaudio="Charis SIL/GR" at 12pt
+\font\divshh="Charis SIL/GR" at 12pt
+\font\spanshh="Charis SIL/GR" at 12pt
 \font\divstp="Charis SIL AmArea/GR" at 12pt
 \font\spanstp="Charis SIL AmArea/GR" at 12pt
 \font\divta="Latha/GR" at 12pt
@@ -310,7 +314,7 @@
 \end{titlepage} 
 \pagenumbering{roman}  
 \setcounter{page}{3} 
-\input{File2Cpy.tex} 
+\input{} 
 \pagestyle{plain} 
 \newpage 
 
