TD-4801 Fixed the introduction paragraphs in Scripture

--- a/src/Test/XhtmlExport/TestFiles/Expected/Gondwana Sample/Gondwana Sample.tex
+++ b/src/Test/XhtmlExport/TestFiles/Expected/Gondwana Sample/Gondwana Sample.tex
@@ -87,8 +87,8 @@
 \font\spanfrfonipa="Doulos SIL/GR" at 12pt
 \font\divfrZxxxxaudio="Charis SIL/GR" at 12pt
 \font\spanfrZxxxxaudio="Charis SIL/GR" at 12pt
-\font\divfr="Charis SIL/GR" at 12pt
-\font\spanfr="Charis SIL/GR" at 12pt
+\font\divfr="Times New Roman/GR" at 12pt
+\font\spanfr="Times New Roman/GR" at 12pt
 \font\divggofonipaxemic="Tahoma/GR" at 12pt
 \font\spanggofonipaxemic="Tahoma/GR" at 12pt
 \font\divggoINxaheri="Arial Unicode MS/GR" at 12pt
