TD-4810 Scripture export leaves too much spaces

--- a/src/Test/XhtmlExport/TestFiles/Expected/Gondwana Sample/Gondwana Sample.tex
+++ b/src/Test/XhtmlExport/TestFiles/Expected/Gondwana Sample/Gondwana Sample.tex
@@ -340,7 +340,8 @@
 
 \pagestyle{fancy} 
 \begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterggoTeluINletHead{అ}}}}
+\topskip 18pt{
+ \setlength{\parskip}{18pt plus 1pt minus 2pt}{\letterggoTeluINletHead{అ}}}
  \label{PageStock_PreserveGondwana Sample1} \end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
@@ -531,7 +532,8 @@
 \hangafter=1
 \headwordggoTeluINentryletData{అడ్డంవడి} \spanenpronunciationggofonipaxemicpronunciationsentryletData{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletData{aḍḍanvaḍi}\spanenpronunciationggofonipaxemicpronunciationsentryletData{]} \spanendefinitionensensesensesentryletData{air coming across} \spanteLexSensepublishStemGlossPubLdtesensesensesentryletData{అడ్డంగా వచ్చే గాలి} \spanggoTeluINexampleggoTeluINexamplessensesensesentryletData{నిన్నెతల్ అడ్డంవడి వాసెర్ మంత.} \spantetranslationLdtetranslationsexamplessensesensesentryletData{నిన్నటి నుండి అడ్డంగా గాలి వస్తుంది.} 
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterggoTeluINletHead{న}}}}
+\topskip 18pt{
+ \setlength{\parskip}{18pt plus 1pt minus 2pt}{\letterggoTeluINletHead{న}}}
  \label{PageStock_PreserveGondwana Sample2} \end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
@@ -544,7 +546,8 @@
 \hangafter=1
 \headwordggoTeluINentryletData{-న్గటల్} \spanenpronunciationggofonipaxemicpronunciationsentryletData{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletData{ngaṭal}\spanenpronunciationggofonipaxemicpronunciationsentryletData{]} 
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterggoTeluINletHead{ు}}}}
+\topskip 18pt{
+ \setlength{\parskip}{18pt plus 1pt minus 2pt}{\letterggoTeluINletHead{ు}}}
  \label{PageStock_PreserveGondwana Sample3} \end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
@@ -557,7 +560,8 @@
 \hangafter=1
 \headwordggoTeluINentryletData{-ుర్} \spanenpronunciationggofonipaxemicpronunciationsentryletData{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletData{ur}\spanenpronunciationggofonipaxemicpronunciationsentryletData{]} \spanenpartofspeechengrammaticalinfosensesensesentryletData{vs} \spanendefinitionensensesensesentryletData{3.M.PL.DIST} 
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterggoTeluINletHead{ొ}}}}
+\topskip 18pt{
+ \setlength{\parskip}{18pt plus 1pt minus 2pt}{\letterggoTeluINletHead{ొ}}}
  \label{PageStock_PreserveGondwana Sample4} \end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
