--- a/src/Test/XhtmlExport/TestFiles/Expected/NKOu3/NKOu3.tex
+++ b/src/Test/XhtmlExport/TestFiles/Expected/NKOu3/NKOu3.tex
@@ -291,8 +291,8 @@
 \TitleSecondaryzxxTitleMainscrBookscrBody{Lɔ́wanlɩ́n}\end{center}
 \end{center}\setlength{\columnsep}{12pt} 
 \setlength\columnseprule{0.4pt} 
-\begin{multicols}{2}{\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Bɔhɔ Yesu Fɛ́ Owíe Yerusalem}\end{center}}
+\begin{multicols}{2}{\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Bɔhɔ Yesu Fɛ́ Owíe Yerusalem}\end{center}
 \begin{center}
 \spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody{(Marko 11:1-11; Luka 19:28-40; Yohane 12:12-19)}\end{center}
 \widowpenalty=300
@@ -331,8 +331,8 @@
 \clubpenalty=300
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{11}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Ɔdɔm amʋ́ʋ́ bʋbuo mʋ amʋ bɛlɛ mʋ́ ɔnɔ́ bɛɛ, $“$Ɔ́nɩ gyí Yesu, Bulu ɔnɔ́sʋ́ ɔtɔɩ́pʋ́ amʋ́ʋ́ otsú Nasaret wúluá ɩbʋ Galilea ɔmátɔ́ ámʋ nɩ.$”$}
- {\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Yesu Bulu Ɔtswɛ́kpa Yɔ}\end{center}}
+ {\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Yesu Bulu Ɔtswɛ́kpa Yɔ}\end{center}
 \begin{center}
 \spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody{(Marko 11:15-19; Luka 19:45-48; Yohane 2:13-22)}\end{center}
 \widowpenalty=300
@@ -351,8 +351,8 @@
 \clubpenalty=300
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{17}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Yesu lɛ́dalɩ wúlu amʋtɔ sí amʋ́ yɔ́ Betania. Ɩnʋ́ ɔlɛdɩ ɛkɛ ámʋ nɩ.}
- {\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Pɔntɔ Oyí Lwɩɩ́}\end{center}}
+ {\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Pɔntɔ Oyí Lwɩɩ́}\end{center}
 \begin{center}
 \spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody{(Marko 11:12-14, 20-24)}\end{center}
 \widowpenalty=300
@@ -367,8 +367,8 @@
 \clubpenalty=300
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{21}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Yesu lɛ́bláa amʋ́ ɔbɛ́ɛ, $“$Ɔnɔkwalɩ ndɛ mlɩ bláa. Nɩ́ mlɔhɔ Bulu gyi, mlɩmégyi nwɛ́ɛn a, mlɛ́talɩ́ bwɛ́ ɩtɔ́ ánfɩ nabwɛ́ oyí ánfɩ pʋ́ mʋ́á ɩdʋn mʋ́. Mlɛ́talɩ́ bláa ɩbʋ ánfɩ mlɩaa, $‘$Puli yowie ɔpʋtɔ.$’$ Ibópulí yɔ́. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{22}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Nɩ́ mlɔhɔ Bulu gyi, mlɔkʋ́lɩ́ mʋ tógyítɔ́ á, mlɩ ɩbɩ bɛ́da mʋ́.$”$}
- {\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Yesu Túmi Ɩwɩ Asʋn Fɩtɛ́hɛ́}\end{center}}
+ {\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Yesu Túmi Ɩwɩ Asʋn Fɩtɛ́hɛ́}\end{center}
 \begin{center}
 \spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody{(Marko 11:27-33; Luka 20:1-8)}\end{center}
 \widowpenalty=300
@@ -387,8 +387,8 @@
 \clubpenalty=300
 
 \spanzxxParagraphscrSectioncolumnsscrBookscrBody{Mʋ́ʋ́ Yesu ɛ́ lɛ́bláa amʋ́ ɔbɛ́ɛ, $“$Mʋ́mʋ́ mɩ́ ɛ́ mmɛ́ɛbláa mlɩ túmi oduá ndɛpʋbwɛ́ ntobí ánfɩ.$”$}
- {\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Oyin Ɔkʋ Abi Anyɔ Ɩwɩ Yébi}\end{center}}
+ {\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Oyin Ɔkʋ Abi Anyɔ Ɩwɩ Yébi}\end{center}
 \widowpenalty=300
 \clubpenalty=300
 
@@ -401,8 +401,8 @@
 \clubpenalty=300
 
 \spanzxxParagraphscrSectioncolumnsscrBookscrBody{Mʋ́ʋ́ Yesu lɛ́bláa amʋ́ ɔbɛ́ɛ, $“$Ɔnɔkwalɩ ndɛ mlɩ bláa. Lampóo ahɔ́pʋ pʋ́ obu-ɔnɔ́ atsiápʋ́ bówie Bulu iwíegyí ámʋtɔ sí mlɩ. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{32}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Tsúfɛ́ Asú Ɔbɔpʋ́ Yohane lóbosuná mlɩ tsiátɔ́ oduá ɩda ɔkpa Bulu ansɩ́tɔ́, támɛ mlɩmɔ́hɔ mʋ gyi. Lampóo ahɔ́pʋ pʋ́ obu-ɔnɔ́ atsiápʋ́ bɔhɔ mʋ gyi. Ɔma mlɩlówun ánɩ́ amʋ́ kʋ́ráá batsɛ a, mlɩmɛ́tsɛ mlɩ agywɩɩn hɔ mʋ gyi.}
- {\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Apafɔ Laláhɛ Akʋ}\end{center}}
+ {\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Apafɔ Laláhɛ Akʋ}\end{center}
 \begin{center}
 \spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody{(Marko 12:1-12; Luka 20:9-19)}\end{center}
 \widowpenalty=300
@@ -447,8 +447,8 @@
 \clubpenalty=300
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{44}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ $“$Ɩ́nɩ sʋ ɔhá ánɩ́ ɔlɛdɩda ibwi ámʋsʋ obébiabía blúblúblúblú. Nɩ́ ibwi ámʋ isúnkí dá ɔkʋsʋ ɛ́ á, ɩbɔ́kwɛ mʋ fɩ́kɔ́fɩ́kɔ́fɩ́kɔ́ fɛ́ nfúó.}\footnote {\ftzxxNoteGeneralParagraphParagraphscrSectioncolumnsscrBookscrBody{21:44 Mʋ́tɔ́ yée 44 ɩma nwʋlʋ́ dada amʋ akʋtɔ.}}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{$”$ }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{45}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Brɛ́á Bulu igyi ahapʋ́ dɛhɛn pʋ́ Farisifɔ ámʋ bonu Yesu ayébi anfɩ á, ɩlɔwankɩ́ amʋ́ ánɩ́ amʋ́ ɔdɛ. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{46}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Tɛkɩ bekleá bɛ́kɩtá mʋ, támɛ benya ifú, tsúfɛ́ ɔdɔm amʋ bʋtobú Yesu ánɩ́ Bulu ɔnɔ́sʋ́ ɔtɔɩ́pʋ́ ogyi.}
- {\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Ɔtsɩkpaɩ́n Ɩwɩ Yébi}\end{center}}
+ {\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Ɔtsɩkpaɩ́n Ɩwɩ Yébi}\end{center}
 \begin{center}
 \spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody{(Luka 14:15-24)}\end{center}
 \widowpenalty=300
@@ -463,8 +463,8 @@
 \clubpenalty=300
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{14}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Yesu lɔ́mɔ mʋ asʋ́n ɔnɔ́ ɔbɛ́ɛ, $“$Bulu tɛtɩ́ ahá tsɔtsɔɔtsɔ, támɛ ahá kpalobí pɛ́ ɔtɛlɛ́.$”$}
- {\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Lampóoka}\end{center}}
+ {\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Lampóoka}\end{center}
 \begin{center}
 \spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody{(Marko 12:13-17; Luka 20:20-26)}\end{center}
 \widowpenalty=300
@@ -491,8 +491,8 @@
 \clubpenalty=300
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{22}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Yesu mbuaɩ ánfɩ lóbwie amʋ́ ɔnɔ́. Mʋ́ sʋ bɛnatɩ́.}
- {\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Kʋsʋ́ Tsú Afúlitɔ Ɩwɩ Asʋn Fɩtɛ́hɛ́}\end{center}}
+ {\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Kʋsʋ́ Tsú Afúlitɔ Ɩwɩ Asʋn Fɩtɛ́hɛ́}\end{center}
 \begin{center}
 \spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody{(Marko 12:18-27; Luka 20:27-40)}\end{center}
 \widowpenalty=300
@@ -507,8 +507,8 @@
 \clubpenalty=300
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{33}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Brɛ́á ɔdɔm amʋ bonu asʋ́n ánfɩ á, mʋ atosunáhɛ́ anfɩ lɛha ɔnɔ́ lobwie amʋ́.}
- {\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Bulu Mbla Ámʋtɔ Mʋ́á Ɩdʋn}\end{center}}
+ {\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Bulu Mbla Ámʋtɔ Mʋ́á Ɩdʋn}\end{center}
 \begin{center}
 \spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody{(Marko 12:28-34; Luka 10:25-28)}\end{center}
 \widowpenalty=300
@@ -519,8 +519,8 @@
 \clubpenalty=300
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{37}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Yesu lɛ́bláa mʋ ɔbɛ́ɛ, $“$ $‘$Pʋ fʋ́ klʋn, fʋ́ ɔkláa pʋ́ fʋ́ agywɩɩn fɛ́ɛ́ dwɛ fʋ́ Wíe Bulu.$’$ }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{38}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Ɩ́nɩ gyí mbla ámʋtɔ gyankpapʋ ánɩ́ ɩdʋn mʋ́ fɛ́ɛ́ nɩ́. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{39}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Nyɔɔsɩ ɛ́ igyi fɛ́ mʋ́. $‘$Dwɛ fʋ́ bá fɛ́ fʋ́ ɩwɩ.$’$ }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{40}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Mose Mbla pʋ́ Bulu ɔnɔ́sʋ́ atɔɩ́pʋ́ amʋ atosunáhɛ́ fɛ́ɛ́ ɩlɩɩ́ mbla anyɔ ánfɩsʋ.$”$}
- {\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Ma Gyí Kristo Amʋ?}\end{center}}
+ {\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Ma Gyí Kristo Amʋ?}\end{center}
 \begin{center}
 \spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody{(Marko 12:35-37; Luka 20:41-44)}\end{center}
 \widowpenalty=300
@@ -553,8 +553,8 @@
 \clubpenalty=300
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{46}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Amʋ́tɔ́ ɔkʋkʋ mɛ́talɩ́ lɛ́ mʋ́ ɔnɔ́. Tsú ɛkɛ ámʋ a, ɔhaa mɛ́trá wa klʋn fɩtɛ́ mʋ asʋansʋ.}
- {\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Mose Mbla Asunápʋ́ Pʋ́ Farisifɔ Tsiátɔ́}\end{center}}
+ {\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Mose Mbla Asunápʋ́ Pʋ́ Farisifɔ Tsiátɔ́}\end{center}
 \begin{center}
 \spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody{(Marko 12:38-39; Luka 11:43, 46; 20:45-46)}\end{center}
 \widowpenalty=300
@@ -563,8 +563,8 @@
 \ChapterNumberzxxParagraphscrSectioncolumnsscrBookscrBody{23}}{\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{1}$}}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Asʋ́n ánfɩ ɔma a, Yesu lɛ́bláa ɔdɔm amʋ pʋ́ mʋ akasɩ́pʋ́ amʋ ɔbɛ́ɛ, }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{2}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ $“$Mose mbla Farisifɔ pʋ́ Mbla asunápʋ́ amʋ bʋdesuná. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{3}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Mʋ́ sʋ mlɩgyi amʋ́ asʋn blɩ́hɛ́ fɛ́ɛ́sʋ́, támɛ mlɩmátsiá amʋ́ atsiábi. Tsúfɛ́ bʋtamagyi amʋ́ onutó asʋn blɩ́hɛ́sʋ. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{4}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Bʋtɔpʋ́ atɔ dwindwín sʋ́rá ahá, támɛ amʋ́ onutó bʋtamapʋ́ osrebi ɔkʋlɛ kʋ́ráá tsá amʋ́ tsu. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{5}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Bʋtɔbwɛ́ amʋ́ tógyítɔ́ ahá ansɩ́sʋ́. Bʋtɔwánlɩ́n Bulu asʋ́n dɩ́nká tati tɛ́ɩ́hɛ́sʋ, pʋ́klɩ́ amʋ́ ɔsʋkpɩ pʋ́ amʋ́ bɩna ɩbasʋ. Bʋtɔlʋ́ nfɛ́ tɩ́ntɩ́ɩ́ntɩ́n síánsían amʋ́ atadɩɛ ɔnɔ́. }\begin{center}\spanzxxpictureCaptionzxxpictureColumnParagraphscrSectioncolumnsscrBookscrBody{Farisiyin nɩ.}\referencezxxpictureCaptionzxxpictureColumnParagraphscrSectioncolumnsscrBookscrBody{ (Mateo 23:5) }\end{center}
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{6}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Bʋtekle otsiákpá yilé tsiá nkɛ ogyíkpá pʋ́ Yudafɔ Ofíakpa. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{7}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Bɛdálɩ yɔ dɩnsʋ á, bʋtekle bɛɛ ahá bʋtɩ́ɩ amʋ́ bɛɛ, $‘$Asunápʋ́,$’$ abʋbun ha amʋ́ itsiá. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{8}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Mlɩ fɛ́ɛ́ á, apíó mlɩgyí. Mʋ́ sʋ mlɩmáha abʋtɩ mlɩtɔ ɔhaa osunápʋ́. Ɔbakʋ́lɛ pɛ́ gyí mlɩ osunápʋ́. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{9}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Alɩ kɛ́n mlɩmátɩ ɔhaa mlɩ sɩ́ ɔsʋlʋ́ʋ anfɩsʋ nɩ́. Tsúfɛ́ Ɔsɩ́ ɔkʋlɛ pɛ́ mlɩbʋ, ɔbʋ ɔsʋ́sʋ́. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{10}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Tráhɛtráhɛ a, mlɩtɔ ɔhaa máha abʋtɩ mʋ nkpá ogyápʋ. Tsúfɛ́ nkpá ogyápʋ ɔkʋlɛ pɛ́ mlɩbʋ. Mʋgyí Kristo, (ɔhá ámʋ́ʋ́ Bulu ladá mʋ ofúli amʋ). }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{11}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Mlɩtɔ ɔhandɛ ɔbwɛ́ɛ mlɩ osúmpʋ́. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{12}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Tsúfɛ́ fʋ́á fotsu ɩwɩ á, Bulu ɔbɛ́ba fʋ asɩ. Fʋ́á fɛba ɩwɩasɩ ɛ́ á, Bulu obótsu fʋ fʋ́á.}
- {\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Apinabwɛbí Abwɛpʋ́}\end{center}}
+ {\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Apinabwɛbí Abwɛpʋ́}\end{center}
 \begin{center}
 \spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody{(Marko 12:40; Luka 11:39-42, 44, 52; 20:47)}\end{center}
 \widowpenalty=300
@@ -591,16 +591,16 @@
 \clubpenalty=300
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{27}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ $“$Mlɩ Farisifɔ pʋ́ Mose mbla asunápʋ́, apinabwɛbí abwɛpʋ́, mlɩgyɔwɩ nɩ́. Mlɩlabwɛ́ fɛ́ ntsán ánɩ́ bakpá mʋ́ afá futútúútú, mʋ́ ɩwɩ lawá akɩ́lɛ. Támɛ mʋ́tɔ́ mʋ́ á, afúli awú pʋ́ atɔ plɔ́hɛ́ sɔ́ɔ́n bɔ́ mʋ́. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{28}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Alɩ kɛ́n mlɩgyí nɩ́. Ahá bʋtɛkɩ mlɩ ánɩ́ mlɩgyí yilé abwɛpʋ́. Támɛ mlɩ klʋntɔ mʋ́ á, apinabwɛbíbwɛ mʋ́a lalahɛbwɛ sɔ́ɔ́n bɔ́ mʋ́.}
- {\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Bulu Ɩsʋbɩtɩ́}\end{center}}
+ {\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Bulu Ɩsʋbɩtɩ́}\end{center}
 \begin{center}
 \spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody{(Luka 11:47-51)}\end{center}
 \widowpenalty=300
 \clubpenalty=300
 
 \VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{29-30}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ $“$Mlɩ Farisifɔ pʋ́ Mose mbla asunápʋ́, apinabwɛbí abwɛpʋ́, mlɩgyɔwɩ nɩ́. Tsúfɛ́ mlɩtɔpwɛ́ Bulu ɔnɔ́sʋ́ atɔɩ́pʋ́ pʋ́ yilé abwɛpʋ́ ámʋ́ʋ́ betsiá ámʋ ntsán, lá mʋ́ ɩwɩ wankláán, blɩ́ mlɩaa, $‘$Nɩ́ anɩlétsiá anɩ anáin brɛ́sʋ́ asa bɔmɔ Bulu ɔnɔ́sʋ́ atɔɩ́pʋ́ anfɩ á, tɛkɩ anɩmɔ́wa ɩbɩ mʋ́tɔ́.$’$ }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{31}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Mlɩ asʋn blɩ́hɛ́ anfɩ désuná ánɩ́ mlɩgyí Bulu ɔnɔ́sʋ́ atɔɩ́pʋ́ amɔpʋ́ ámʋ abí-aná nɩ́. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{32}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Mlɩwuna yɔ mʋ́sʋ́, amlɩmɔ mlɩ anáin bwɛhɛ́ ámʋ ɔnɔ́. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{33}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Awɔ, abɛ abí-aná! Mlɛ́talɩ́ srɩ́ sí ɩpɔ́n ámʋ́ʋ́ Bulu ɔbɛ́ha mlɩ, kpá mlɩ wá ɩsʋbɩtɩ́ ogyá ámʋ́ʋ́ ɩtamaduntɔ ámʋ? }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{34}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Mʋ́ sʋ ndɛ Bulu ɔnɔ́sʋ́ atɔɩ́pʋ́, anyansapʋ pʋ́ Mose mbla asunápʋ́ wa sɩ́sɩ́ mlɩ. Támɛ mlɔ́mɔ akʋ, dá amʋ́tɔ́ akʋ mántá oyikpalíhɛsʋ. Mlɔ́nwɛn amʋ́tɔ́ akʋ mplɩ mlɩ ofíakpa, dɩ́nká akʋsʋ tsú awúlusʋ yɔ́ awúlusʋ. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{35}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Ɩ́nɩ sʋ yilé abwɛpʋ́ ámʋ́ʋ́ mlɩa mlɩ anáin mlɩlamɔ́ tsú }\SeeInGlossaryzxxParagraphscrSectioncolumnsscrBookscrBody{Habelsʋ}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ bɔfʋn Sakaria, ogyi Barakia mʋ bi ámʋ́ʋ́ mlɩlɔ́mɔ Bulu ɔtswɛ́kpa obu mʋ́a }\SeeInGlossaryzxxParagraphscrSectioncolumnsscrBookscrBody{afɔdɩɛ-asubwi}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ amʋ nsɩnɛ́ ámʋ fɛ́ɛ́ obugya bɛ́ba mlɩsʋ. }\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody{$^{36}$}\spanzxxParagraphscrSectioncolumnsscrBookscrBody{ Ɔnɔkwalɩ ndɛ mlɩ bláa. Ɩ́nɩ aná fɛ́ɛ́ sʋ Bulu ɩsʋbɩtɩ́ bɛ́ba mlɩ ndɛmba-abí ánfɩsʋ nɩ́.}
- {\raggedright} \section*{\needspace {8\baselineskip}\begin{center}
-\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Yerusalemfɔ Ɩwɩ Ɔdwɛ}\end{center}}
+ {\raggedright} \begin{center}
+\spanzxxSectionHeadscrSectioncolumnsscrBookscrBody{Yerusalemfɔ Ɩwɩ Ɔdwɛ}\end{center}
 \begin{center}
 \spanzxxParallelPassageReferencescrSectioncolumnsscrBookscrBody{(Luka 13:34-35)}\end{center}
 \widowpenalty=300
