TD-4722 Fix Xelatex Indent issue

--- a/src/Test/XhtmlExport/TestFiles/Expected/NKOu3/NKOu3.tex
+++ b/src/Test/XhtmlExport/TestFiles/Expected/NKOu3/NKOu3.tex
@@ -27,8 +27,7 @@
 \renewcommand{\thefootnote}{\alphalph{\value{footnote}}} 
 
 
-\parindent=0pt
-\parskip=\medskipamount
+\setlength{\parindent}{20pt}
 \begin{document}
 \pagestyle{plain}
 \sloppy
