--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-pathway (1.15.15.5800)  experimental; urgency=high
+pathway (1.15.15.5832)  experimental; urgency=high
 
   * Common:TD-4811 Formatting rtl data - order and spacing is wrong
   * Common:TD-4805 Crash updating css file
@@ -20,13 +20,16 @@ pathway (1.15.15.5800)  experimental; urgency=high
   * Office:TD-4786 Pathway exports are missing alignments and some entries are truncated
   * Office:TD-4777 Header Ever Page gives Mirrored
   * Office:TD-3436 SIL International Logo doesn't look good.
+  * Pt:TD-4679 Handle periph field in INT books
+  * Smart:TD-4842 Don't flatten output for DictionaryForMIDs
+  * UI:TD-4813 Fix preview message
   * UI:TD-4827 Regional Langauge Formats set to Russian disables header and guideword formatting
   * UI:TD-4828 Missing Minor entry guidewords and wrong language code.
   * UI:TD-4795 Warning box appears in Config Tool from clicking Scripture in left pane
   * XeLaTeX:TD-4722 Fix Xelatex Indent issue
   * XeLaTeX:TD-4810 Scripture export leaves too much space around headers
 
- -- Greg Trihus <greg_trihus@sil.org>  Fri, 12 May 2017 15:37:20 -0600
+ -- Greg Trihus <greg_trihus@sil.org>  Fri, 21 Jun 2017 15:12:20 -0600
 
 pathway (1.15.14.5765)  experimental; urgency=high
 
