--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pathway (1.15.17.5844)  experimental; urgency=high
+
+  * HTML5:Add Classified or Semantic domain index
+
+ -- Greg Trihus <greg_trihus@sil.org>  Tue, 21 Jun 2017 10:24:20 -0600
+
 pathway (1.15.15.5832)  experimental; urgency=high
 
   * Common:TD-4811 Formatting rtl data - order and spacing is wrong
